# integers

./: .gitignore  Cargo.toml  README.md
.githooks/: post-receive
benches/: memory_bench.rs  tensor_bench.rs
data/: iris_test.tsv  iris_train.tsv
data/mnist/: .gitignore  README.md  get_dataset.py  pyproject.toml
examples/: cifar.rs  iris.rs  iris_f32.rs  mnist.rs  mnist_f32.rs  mnist_to_parquet.rs  pairity.rs  xor.rs
examples/cifar/: cifar_loader.rs  main.rs
examples/mnist/: main.rs  mnist_loader.rs
examples/mnist_nn/: main.rs  mnist_loader.rs
src/: cifar_loader.rs  dataset_loaders.rs  dyadic.rs  lib.rs  main.rs  mnist_loader.rs
src/data/: data.rs  dataset_loaders.rs  mod.rs
src/lib/: data.rs  dataset_loaders.rs  debug.rs  dyadic.rs  nn.rs  quant.rs  rng.rs  tensor.rs
src/lib/nn/: activations.rs  conv.rs  kernels.rs  losses.rs  optim.rs  rnn.rs
src/nn/: activations.rs  conv.rs  linear.rs  mod.rs  regularization.rs
tests/: test_gradients.rs  test_linear.rs  test_overflow.rs  test_rnn.rs
